--- a/notebooks/aula00.ipynb
+++ b/notebooks/aula00.ipynb
@@ -137,7 +137,7 @@
     }
    ],
    "source": [
-    "import keyword\n",
+    "import keyword #comentário teste\n",
     "keyword.kwlist"
    ]
   },
