Resolução do Exercício 00 - Marina Gomes Cid

--- a/exercicios/exercicio00.ipynb
+++ b/exercicios/exercicio00.ipynb
@@ -180,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "int"
+       "float"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
