--- a/exercicios/exercicio01.ipynb
+++ b/exercicios/exercicio01.ipynb
@@ -14,6 +14,12 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "1) Escolha um número entre 1 e 10 e armazene ele numa variável chamada *segredo*. Escolha outro número entre 1 e 10 novamente e salve ele numa variável chamada *chute*. Depois, escreva testes condicionais usando *if*, *else* e *elif* para exibir a mensagem \"muito menor\" se *chute* é menor do que *segredo*, \"muito maior\" se *chute* é maior do que *segredo* e \"na mosca\" se *chute* for igual à *segredo*.\n",
     "\n",
@@ -42,13 +48,90 @@
     "- Armazene os números de 1 a 9 em uma lista.\n",
     "- Pecorra essa lista com um laco.\n",
     "- Use uma cadeia de instrucões *if*-*elif*-*else* que exiba a terminacão apropriada para cada número ordinal. Sua saída deverá conter \"1st 2nd 3rd 4th 5th 6th 7th 8th 9th\" e cada resultado deve estar em uma linha separada\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Na mosca\n"
+     ]
     }
-   }
+   ],
+   "source": [
+    "#exercício 1\n",
+    "segredo = 3\n",
+    "chute = 3\n",
+    "if chute < segredo:\n",
+    "    print(\"Muito menor\")\n",
+    "elif chute > segredo:\n",
+    "    print(\"Muito maior\")\n",
+    "else:\n",
+    "    print(\"Na mosca\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "É um(a) adulto(a)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#exercício 2\n",
+    "idade = 20\n",
+    "if idade < 2:\n",
+    "    print(\"Ainda é bebê\")\n",
+    "elif (idade == 2) or (idade < 4):\n",
+    "    print(\"Ainda é criança\")\n",
+    "elif (idade == 4) or (idade < 13):\n",
+    "    print(\"É um(a) garoto(a)\")\n",
+    "elif (idade == 13) or (idade < 20):\n",
+    "    print(\"É um(a) adolescente\")\n",
+    "elif (idade == 20) or (idade < 65):\n",
+    "    print(\"É um(a) adulto(a)\")\n",
+    "else:\n",
+    "    print(\"É um(a) idoso(a)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá adm, gostaria de ver o relatório de status?\n",
+      "Olá user1, obrigado por fazer login novamente\n",
+      "Olá user2, obrigado por fazer login novamente\n",
+      "Olá user3, obrigado por fazer login novamente\n",
+      "Olá user4, obrigado por fazer login novamente\n",
+      "Olá user5, obrigado por fazer login novamente\n"
+     ]
+    }
+   ],
+   "source": [
+    "#exercício 3\n",
+    "nomes = [\"adm\", \"user1\", \"user2\", \"user3\", \"user4\", \"user5\"]\n",
+    "for nomes in nomes:\n",
+    "    if nomes == \"adm\":\n",
+    "        print(\"Olá adm, gostaria de ver o relatório de status?\")\n",
+    "    else:\n",
+    "        print(\"Olá \" + nomes + \", obrigado por fazer login novamente\")"
+   ]
   }
  ],
  "metadata": {
@@ -60,14 +143,19 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+   }
   }
  },
  "nbformat": 4,
