--- a/exercicios/exercicio01.ipynb
+++ b/exercicios/exercicio01.ipynb
@@ -132,6 +132,26 @@
     "    else:\n",
     "        print(\"Olá \" + nomes + \", obrigado por fazer login novamente\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precisamos encontrar alguns usuários!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#exercício 4\n",
+    "nomes = []\n",
+    "if nomes == []:\n",
+    "    print(\"Precisamos encontrar alguns usuários!\")"
+   ]
   }
  ],
  "metadata": {
