Resolução Ex01 - Marina Gomes Cid

--- a/exercicios/exercicio01.ipynb
+++ b/exercicios/exercicio01.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,15 +150,46 @@
     "#exercício 4\n",
     "nomes = []\n",
     "if nomes == []:\n",
-    "    print(\"Precisamos encontrar alguns usuários!\")"
+    "    print(\"Precisamos encontrar alguns usuários!\")\n",
+    "for nomes in nomes:\n",
+    "    if nomes == \"adm\":\n",
+    "        print(\"Olá adm, gostaria de ver o relatório de status?\")\n",
+    "    else:\n",
+    "        print(\"Olá \" + nomes + \", obrigado por fazer login novamente\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O nome melancia está disponível.\n",
+      "O nome melao está disponível.\n",
+      "O usuário caqui não está disponível, forneça outro nome.\n",
+      "O usuário banana não está disponível, forneça outro nome.\n",
+      "O nome pitaya está disponível.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#exercício 5\n",
+    "current_users = [\"banana\", \"abacaXI\", \"Caqui\", \"MORANGO\", \"uva\"]\n",
+    "new_users = [\"MelanCIA\", \"melao\", \"CAQUI\", \"BANANa\", \"PITAya\"]\n",
+    "\n",
+    "current_users_lower = [current_users.lower() for current_users in current_users]\n",
+    "new_users_lower = [new_users.lower() for new_users in new_users ]\n",
+    "\n",
+    "for new_users in new_users_lower:\n",
+    "\n",
+    "    if new_users not in current_users_lower:\n",
+    "        print(\"O nome \" + new_users + \" está disponível.\")\n",
+    "    else:\n",
+    "       print(\"O usuário \" + new_users + \" não está disponível, forneça outro nome.\")\n"
+   ]
   }
  ],
  "metadata": {
