Resolução Ex01 - Marina Gomes Cid

--- a/exercicios/exercicio01.ipynb
+++ b/exercicios/exercicio01.ipynb
@@ -190,6 +190,40 @@
     "    else:\n",
     "       print(\"O usuário \" + new_users + \" não está disponível, forneça outro nome.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st\n",
+      "2nd\n",
+      "3rd\n",
+      "4th\n",
+      "5th\n",
+      "6th\n",
+      "7th\n",
+      "8th\n",
+      "9th\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"]\n",
+    "for num in num:\n",
+    "    if num == \"1\":\n",
+    "        print(num + \"st\")\n",
+    "    elif num == \"2\":\n",
+    "        print(num + \"nd\")\n",
+    "    elif num == \"3\":\n",
+    "        print(num + \"rd\")\n",
+    "    else:\n",
+    "        print(num + \"th\")"
+   ]
   }
  ],
  "metadata": {
