--- a/notebooks/aula02.ipynb
+++ b/notebooks/aula02.ipynb
@@ -1964,7 +1964,7 @@
    "source": [
     "# Lidando com valores ausentes\n",
     "# Total de valores ausentes por coluna\n",
-    "df.isna().sum()"
+    "df.isna().sum() #para somar colunas = df[[\"genero\", \"fumante\"]].isna().sum()"
    ]
   },
   {
@@ -2171,7 +2171,7 @@
     }
    ],
    "source": [
-    "# Podemos remover valores missing ou\n",
+    "# Podemos remover valores missing ou (valores vazios N/A)\n",
     "df.dropna()"
    ]
   },
