--- a/exercicios/exercicio02.ipynb
+++ b/exercicios/exercicio02.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -311,7 +311,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,15 +323,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nao    549\n",
+       "sim    342\n",
+       "Name: sobreviveu, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['sobreviveu'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sobreviveram 342 pessoas\n"
+     ]
+    }
+   ],
+   "source": [
+    "#exercício 1\n",
+    "sobreviventes = (df['sobreviveu']=='sim').sum()\n",
+    "print('Sobreviveram {} pessoas'.format(sobreviventes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sobreviveram 68 pessoas com menos de 12 anos\n"
+     ]
+    }
+   ],
+   "source": [
+    "#exercício 2\n",
+    "sobreviventes = (df['sobreviveu']=='sim').sum() and (df['idade']<12).sum()\n",
+    "print('Sobreviveram {} pessoas com menos de 12 anos'.format(sobreviventes))"
+   ]
   }
  ],
  "metadata": {
