--- a/exercicios/exercicio02.ipynb
+++ b/exercicios/exercicio02.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
@@ -384,6 +385,24 @@
     "#exercício 2\n",
     "sobreviventes = (df['sobreviveu']=='sim').sum() and (df['idade']<12).sum()\n",
     "print('Sobreviveram {} pessoas com menos de 12 anos'.format(sobreviventes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embarcaram nos portos de Southampton ou Queenstow 644 pessoas\n"
+     ]
+    }
+   ],
+   "source": [
+    "embarque = (df['embarque']=='Southampton').sum() or (df['embarque']==Queenstow).sum()\n",
+    "print('Embarcaram nos portos de Southampton ou Queenstow {} pessoas'.format(embarque))"
    ]
   }
  ],
