--- a/exercicios/exercicio02.ipynb
+++ b/exercicios/exercicio02.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -340,7 +340,7 @@
        "Name: sobreviveu, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -364,13 +364,13 @@
    ],
    "source": [
     "#exercício 1\n",
-    "sobreviventes = (df['sobreviveu']=='sim').sum()\n",
+    "sobreviventes = (df['sobreviveu'] == 'sim').sum()\n",
     "print('Sobreviveram {} pessoas'.format(sobreviventes))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -383,13 +383,13 @@
    ],
    "source": [
     "#exercício 2\n",
-    "sobreviventes = (df['sobreviveu']=='sim').sum() and (df['idade']<12).sum()\n",
+    "sobreviventes = (df['sobreviveu'] == 'sim').sum() and (df['idade'] < 12).sum()\n",
     "print('Sobreviveram {} pessoas com menos de 12 anos'.format(sobreviventes))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -401,8 +401,296 @@
     }
    ],
    "source": [
-    "embarque = (df['embarque']=='Southampton').sum() or (df['embarque']==Queenstow).sum()\n",
+    "#exercício 3\n",
+    "embarque = (df['embarque'] == 'Southampton').sum() or (df['embarque'] == 'Queenstow').sum()\n",
     "print('Embarcaram nos portos de Southampton ou Queenstow {} pessoas'.format(embarque))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_passageiro</th>\n",
+       "      <th>sobreviveu</th>\n",
+       "      <th>classe</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>irmaos_conjuge</th>\n",
+       "      <th>pais_criancas</th>\n",
+       "      <th>passagem</th>\n",
+       "      <th>tarifa</th>\n",
+       "      <th>cabine</th>\n",
+       "      <th>embarque</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7925.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>347742</td>\n",
+       "      <td>11.1333</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Nasser, Mrs. Nicholas (Adele Achem)</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>237736</td>\n",
+       "      <td>30.0708</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>880</th>\n",
+       "      <td>881</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Shelley, Mrs. William (Imanita Parrish Hall)</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>230433</td>\n",
+       "      <td>26.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>882</th>\n",
+       "      <td>883</td>\n",
+       "      <td>nao</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Dahlberg, Miss. Gerda Ulrika</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7552</td>\n",
+       "      <td>10.5167</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>885</th>\n",
+       "      <td>886</td>\n",
+       "      <td>nao</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Rice, Mrs. William (Margaret Norton)</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>382652</td>\n",
+       "      <td>29125.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Queenstow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>888</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Graham, Miss. Margaret Edith</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>112053</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>B42</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>889</td>\n",
+       "      <td>nao</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Johnston, Miss. Catherine Helen \"Carrie\"</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>W./C. 6607</td>\n",
+       "      <td>23.4500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>314 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id_passageiro sobreviveu  classe  \\\n",
+       "1                2        sim       1   \n",
+       "2                3        sim       3   \n",
+       "3                4        sim       1   \n",
+       "8                9        sim       3   \n",
+       "9               10        sim       2   \n",
+       "..             ...        ...     ...   \n",
+       "880            881        sim       2   \n",
+       "882            883        nao       3   \n",
+       "885            886        nao       3   \n",
+       "887            888        sim       1   \n",
+       "888            889        nao       3   \n",
+       "\n",
+       "                                                  nome      sexo  idade  \\\n",
+       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  feminino   38.0   \n",
+       "2                               Heikkinen, Miss. Laina  feminino   26.0   \n",
+       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  feminino   35.0   \n",
+       "8    Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)  feminino   27.0   \n",
+       "9                  Nasser, Mrs. Nicholas (Adele Achem)  feminino   14.0   \n",
+       "..                                                 ...       ...    ...   \n",
+       "880       Shelley, Mrs. William (Imanita Parrish Hall)  feminino   25.0   \n",
+       "882                       Dahlberg, Miss. Gerda Ulrika  feminino   22.0   \n",
+       "885               Rice, Mrs. William (Margaret Norton)  feminino   39.0   \n",
+       "887                       Graham, Miss. Margaret Edith  feminino   19.0   \n",
+       "888           Johnston, Miss. Catherine Helen \"Carrie\"  feminino    NaN   \n",
+       "\n",
+       "     irmaos_conjuge  pais_criancas          passagem      tarifa cabine  \\\n",
+       "1                 1              0          PC 17599     71.2833    C85   \n",
+       "2                 0              0  STON/O2. 3101282   7925.0000    NaN   \n",
+       "3                 1              0            113803     53.1000   C123   \n",
+       "8                 0              2            347742     11.1333    NaN   \n",
+       "9                 1              0            237736     30.0708    NaN   \n",
+       "..              ...            ...               ...         ...    ...   \n",
+       "880               0              1            230433     26.0000    NaN   \n",
+       "882               0              0              7552     10.5167    NaN   \n",
+       "885               0              5            382652  29125.0000    NaN   \n",
+       "887               0              0            112053     30.0000    B42   \n",
+       "888               1              2        W./C. 6607     23.4500    NaN   \n",
+       "\n",
+       "        embarque  \n",
+       "1      Cherbourg  \n",
+       "2    Southampton  \n",
+       "3    Southampton  \n",
+       "8    Southampton  \n",
+       "9      Cherbourg  \n",
+       "..           ...  \n",
+       "880  Southampton  \n",
+       "882  Southampton  \n",
+       "885    Queenstow  \n",
+       "887  Southampton  \n",
+       "888  Southampton  \n",
+       "\n",
+       "[314 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#exercício 4\n",
+    "passageiras = df.copy()\n",
+    "passageiras.loc[passageiras['sexo'].isin(['feminino'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Crie um objeto chamado **criancas_cherbourg** que seleciona as crianças com menos de 12 anos E que embarcaram na cidade de Cherbourg."
    ]
   }
  ],
