Resolução exercício 2 - Marina Gomes

--- a/exercicios/exercicio02.ipynb
+++ b/exercicios/exercicio02.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -312,7 +312,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -726,66 +726,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>nao</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Palsson, Master. Gosta Leonard</td>\n",
-       "      <td>masculino</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>349909</td>\n",
-       "      <td>21075.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>sim</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Sandstrom, Miss. Marguerite Rut</td>\n",
-       "      <td>feminino</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>PP 9549</td>\n",
-       "      <td>16.7000</td>\n",
-       "      <td>G6</td>\n",
-       "      <td>Southampton</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>17</td>\n",
-       "      <td>nao</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Rice, Master. Eugene</td>\n",
-       "      <td>masculino</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>382652</td>\n",
-       "      <td>29125.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Queenstow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>25</td>\n",
-       "      <td>nao</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Palsson, Miss. Torborg Danira</td>\n",
-       "      <td>feminino</td>\n",
-       "      <td>8.00</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>349909</td>\n",
-       "      <td>21075.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>43</th>\n",
        "      <td>44</td>\n",
        "      <td>sim</td>\n",
@@ -801,19 +741,109 @@
        "      <td>Cherbourg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>381</th>\n",
+       "      <td>382</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Nakid, Miss. Maria (\"Mary\")</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2653</td>\n",
+       "      <td>15.7417</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>448</th>\n",
+       "      <td>449</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Baclini, Miss. Marie Catherine</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2666</td>\n",
+       "      <td>19.2583</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>469</th>\n",
+       "      <td>470</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Baclini, Miss. Helene Barbara</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2666</td>\n",
+       "      <td>19.2583</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>644</th>\n",
+       "      <td>645</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Baclini, Miss. Eugenie</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2666</td>\n",
+       "      <td>19.2583</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>691</th>\n",
+       "      <td>692</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Karun, Miss. Manca</td>\n",
+       "      <td>feminino</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>349256</td>\n",
+       "      <td>13.4167</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>731</th>\n",
+       "      <td>732</td>\n",
+       "      <td>nao</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Hassan, Mr. Houssein G N</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>11.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2699</td>\n",
+       "      <td>18.7875</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>803</th>\n",
+       "      <td>804</td>\n",
+       "      <td>sim</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Thomas, Master. Assad Alexander</td>\n",
+       "      <td>masculino</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2625</td>\n",
+       "      <td>8.5167</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Cherbourg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>827</th>\n",
@@ -831,36 +861,6 @@
        "      <td>Cherbourg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>831</th>\n",
-       "      <td>832</td>\n",
-       "      <td>sim</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Richards, Master. George Sibley</td>\n",
-       "      <td>masculino</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29106</td>\n",
-       "      <td>18.7500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>850</th>\n",
-       "      <td>851</td>\n",
-       "      <td>nao</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Andersson, Master. Sigvard Harald Elias</td>\n",
-       "      <td>masculino</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>347082</td>\n",
-       "      <td>31275.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>852</th>\n",
        "      <td>853</td>\n",
        "      <td>nao</td>\n",
@@ -875,83 +875,49 @@
        "      <td>NaN</td>\n",
        "      <td>Cherbourg</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>869</th>\n",
-       "      <td>870</td>\n",
-       "      <td>sim</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Johnson, Master. Harold Theodor</td>\n",
-       "      <td>masculino</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>347742</td>\n",
-       "      <td>11.1333</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>68 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     id_passageiro sobreviveu  classe  \\\n",
-       "7                8        nao       3   \n",
-       "10              11        sim       3   \n",
-       "16              17        nao       3   \n",
-       "24              25        nao       3   \n",
        "43              44        sim       2   \n",
-       "..             ...        ...     ...   \n",
+       "381            382        sim       3   \n",
+       "448            449        sim       3   \n",
+       "469            470        sim       3   \n",
+       "644            645        sim       3   \n",
+       "691            692        sim       3   \n",
+       "731            732        nao       3   \n",
+       "803            804        sim       3   \n",
        "827            828        sim       2   \n",
-       "831            832        sim       2   \n",
-       "850            851        nao       3   \n",
        "852            853        nao       3   \n",
-       "869            870        sim       3   \n",
        "\n",
        "                                         nome       sexo  idade  \\\n",
-       "7              Palsson, Master. Gosta Leonard  masculino   2.00   \n",
-       "10            Sandstrom, Miss. Marguerite Rut   feminino   4.00   \n",
-       "16                       Rice, Master. Eugene  masculino   2.00   \n",
-       "24              Palsson, Miss. Torborg Danira   feminino   8.00   \n",
        "43   Laroche, Miss. Simonne Marie Anne Andree   feminino   3.00   \n",
-       "..                                        ...        ...    ...   \n",
+       "381               Nakid, Miss. Maria (\"Mary\")   feminino   1.00   \n",
+       "448            Baclini, Miss. Marie Catherine   feminino   5.00   \n",
+       "469             Baclini, Miss. Helene Barbara   feminino   0.75   \n",
+       "644                    Baclini, Miss. Eugenie   feminino   0.75   \n",
+       "691                        Karun, Miss. Manca   feminino   4.00   \n",
+       "731                  Hassan, Mr. Houssein G N  masculino  11.00   \n",
+       "803           Thomas, Master. Assad Alexander  masculino   0.42   \n",
        "827                     Mallet, Master. Andre  masculino   1.00   \n",
-       "831           Richards, Master. George Sibley  masculino   0.83   \n",
-       "850   Andersson, Master. Sigvard Harald Elias  masculino   4.00   \n",
        "852                   Boulos, Miss. Nourelain   feminino   9.00   \n",
-       "869           Johnson, Master. Harold Theodor  masculino   4.00   \n",
        "\n",
-       "     irmaos_conjuge  pais_criancas         passagem      tarifa cabine  \\\n",
-       "7                 3              1           349909  21075.0000    NaN   \n",
-       "10                1              1          PP 9549     16.7000     G6   \n",
-       "16                4              1           382652  29125.0000    NaN   \n",
-       "24                3              1           349909  21075.0000    NaN   \n",
-       "43                1              2    SC/Paris 2123     41.5792    NaN   \n",
-       "..              ...            ...              ...         ...    ...   \n",
-       "827               0              2  S.C./PARIS 2079     37.0042    NaN   \n",
-       "831               1              1            29106     18.7500    NaN   \n",
-       "850               4              2           347082  31275.0000    NaN   \n",
-       "852               1              1             2678     15.2458    NaN   \n",
-       "869               1              1           347742     11.1333    NaN   \n",
-       "\n",
-       "        embarque  \n",
-       "7    Southampton  \n",
-       "10   Southampton  \n",
-       "16     Queenstow  \n",
-       "24   Southampton  \n",
-       "43     Cherbourg  \n",
-       "..           ...  \n",
-       "827    Cherbourg  \n",
-       "831  Southampton  \n",
-       "850  Southampton  \n",
-       "852    Cherbourg  \n",
-       "869  Southampton  \n",
-       "\n",
-       "[68 rows x 12 columns]"
+       "     irmaos_conjuge  pais_criancas         passagem   tarifa cabine   embarque  \n",
+       "43                1              2    SC/Paris 2123  41.5792    NaN  Cherbourg  \n",
+       "381               0              2             2653  15.7417    NaN  Cherbourg  \n",
+       "448               2              1             2666  19.2583    NaN  Cherbourg  \n",
+       "469               2              1             2666  19.2583    NaN  Cherbourg  \n",
+       "644               2              1             2666  19.2583    NaN  Cherbourg  \n",
+       "691               0              1           349256  13.4167    NaN  Cherbourg  \n",
+       "731               0              0             2699  18.7875    NaN  Cherbourg  \n",
+       "803               0              1             2625   8.5167    NaN  Cherbourg  \n",
+       "827               0              2  S.C./PARIS 2079  37.0042    NaN  Cherbourg  \n",
+       "852               1              1             2678  15.2458    NaN  Cherbourg  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +925,8 @@
    "source": [
     "#criancas_cherbourg.loc[criancas_cherbourg['embarque'] == 'Cherbourg'and criancas_cherbourg['idade'] < 12]\n",
     "criancas_cherbourg = df.copy()\n",
-    "criancas_cherbourg.loc[(criancas_cherbourg['idade'] < 12)] #(criancas_cherbourg['embarque'] == 'Cherbourg') and (criancas_cherbourg['idade'] < 12)]"
+    "#criancas_cherbourg.loc[(criancas_cherbourg['idade'] < 12)] \n",
+    "criancas_cherbourg.loc[(criancas_cherbourg['embarque'] == 'Cherbourg') & (criancas_cherbourg['idade'] < 12)]"
    ]
   }
  ],
@@ -979,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (main, Dec 19 2022, 20:24:16) [GCC 9.4.0]"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
