Resolução exercício 02 - Marina Gomes

--- a/exercicios/exercicio02.ipynb
+++ b/exercicios/exercicio02.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "[314 rows x 12 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -917,15 +917,14 @@
        "852               1              1             2678  15.2458    NaN  Cherbourg  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#criancas_cherbourg.loc[criancas_cherbourg['embarque'] == 'Cherbourg'and criancas_cherbourg['idade'] < 12]\n",
+    "# exercício 5\n",
     "criancas_cherbourg = df.copy()\n",
-    "#criancas_cherbourg.loc[(criancas_cherbourg['idade'] < 12)] \n",
     "criancas_cherbourg.loc[(criancas_cherbourg['embarque'] == 'Cherbourg') & (criancas_cherbourg['idade'] < 12)]"
    ]
   }
