Resolução exercício 02 - Marina Gomes

--- a/exercicios/exercicio02.ipynb
+++ b/exercicios/exercicio02.ipynb
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
        "852               1              1             2678  15.2458    NaN  Cherbourg  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,6 +926,185 @@
     "# exercício 5\n",
     "criancas_cherbourg = df.copy()\n",
     "criancas_cherbourg.loc[(criancas_cherbourg['embarque'] == 'Cherbourg') & (criancas_cherbourg['idade'] < 12)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nome</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>classe</th>\n",
+       "      <th>embarque</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>Montvila, Rev. Juozas</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>Graham, Miss. Margaret Edith</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>Johnston, Miss. Catherine Helen \"Carrie\"</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Southampton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>Behr, Mr. Karl Howell</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>Dooley, Mr. Patrick</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Queenstow</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>891 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  nome  idade  classe  \\\n",
+       "0                              Braund, Mr. Owen Harris   22.0       3   \n",
+       "1    Cumings, Mrs. John Bradley (Florence Briggs Th...   38.0       1   \n",
+       "2                               Heikkinen, Miss. Laina   26.0       3   \n",
+       "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)   35.0       1   \n",
+       "4                             Allen, Mr. William Henry   35.0       3   \n",
+       "..                                                 ...    ...     ...   \n",
+       "886                              Montvila, Rev. Juozas   27.0       2   \n",
+       "887                       Graham, Miss. Margaret Edith   19.0       1   \n",
+       "888           Johnston, Miss. Catherine Helen \"Carrie\"    NaN       3   \n",
+       "889                              Behr, Mr. Karl Howell   26.0       1   \n",
+       "890                                Dooley, Mr. Patrick   32.0       3   \n",
+       "\n",
+       "        embarque  \n",
+       "0    Southampton  \n",
+       "1      Cherbourg  \n",
+       "2    Southampton  \n",
+       "3    Southampton  \n",
+       "4    Southampton  \n",
+       "..           ...  \n",
+       "886  Southampton  \n",
+       "887  Southampton  \n",
+       "888  Southampton  \n",
+       "889    Cherbourg  \n",
+       "890    Queenstow  \n",
+       "\n",
+       "[891 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bad pipe message: %s [b'u\\x07x\"\\x8f\\xabz\\xe7\\xdf\\x96L\\xc057\\x08\\xfd\\xc2\\xcd\\x00\\x00\\x86\\xc00\\xc0', b'(\\xc0$\\xc0\\x14\\xc0\\n\\x00\\xa5\\x00\\xa3\\x00\\xa1\\x00\\x9f\\x00k\\x00j\\x00i\\x00h\\x009\\x008\\x007\\x006\\xc02\\xc0.\\xc0*\\xc0&\\xc0\\x0f\\xc0\\x05']\n",
+      "Bad pipe message: %s [b'2\\xce\\xc5U\\xb6\\x9d\\xb3\\x7ft\\xed\\x87\\x8cT\\xb2&w~.\\x00\\x00\\xa2\\xc0\\x14\\xc0\\n\\x009\\x008\\x007\\x006']\n",
+      "Bad pipe message: %s [b\"(m\\x81}\\xc2\\x07\\xa2\\x05qI\\xbe[\\xf4\\x86[\\xf3\\xb82\\x00\\x00|\\xc0,\\xc00\\x00\\xa3\\x00\\x9f\\xcc\\xa9\\xcc\\xa8\\xcc\\xaa\\xc0\\xaf\\xc0\\xad\\xc0\\xa3\\xc0\\x9f\\xc0]\\xc0a\\xc0W\\xc0S\\xc0+\\xc0/\\x00\\xa2\\x00\\x9e\\xc0\\xae\\xc0\\xac\\xc0\\xa2\\xc0\\x9e\\xc0\\\\\\xc0`\\xc0V\\xc0R\\xc0$\\xc0(\\x00k\\x00j\\xc0#\\xc0'\\x00g\\x00@\\xc0\\n\\xc0\\x14\\x009\\x008\\xc0\\t\\xc0\\x13\\x003\\x002\\x00\\x9d\\xc0\\xa1\\xc0\\x9d\\xc0Q\\x00\\x9c\\xc0\\xa0\\xc0\\x9c\\xc0P\\x00=\\x00<\\x005\\x00/\\x00\\x9a\\x00\\x99\\xc0\\x07\\xc0\\x11\\x00\\x96\\x00\\x05\"]\n",
+      "Bad pipe message: %s [b\"\\x07\\xdd#\\xe0B\\xa6\\x19t\\xce\\x9cY\\xd5_!\\x91\\x11\\xee\\x0f\\x00\\x00\\xa6\\xc0,\\xc00\\x00\\xa3\\x00\\x9f\\xcc\\xa9\\xcc\\xa8\\xcc\\xaa\\xc0\\xaf\\xc0\\xad\\xc0\\xa3\\xc0\\x9f\\xc0]\\xc0a\\xc0W\\xc0S\\xc0+\\xc0/\\x00\\xa2\\x00\\x9e\\xc0\\xae\\xc0\\xac\\xc0\\xa2\\xc0\\x9e\\xc0\\\\\\xc0`\\xc0V\\xc0R\\xc0$\\xc0(\\x00k\\x00j\\xc0s\\xc0w\\x00\\xc4\\x00\\xc3\\xc0#\\xc0'\\x00g\\x00@\\xc0r\\xc0v\\x00\\xbe\\x00\\xbd\\xc0\\n\\xc0\\x14\\x009\\x008\\x00\\x88\\x00\\x87\\xc0\\t\\xc0\\x13\\x003\\x002\\x00\\x9a\\x00\\x99\\x00E\\x00D\\xc0\\x07\\xc0\\x11\\xc0\\x08\\xc0\\x12\\x00\\x16\\x00\\x13\\x00\\x9d\\xc0\\xa1\\xc0\\x9d\\xc0Q\\x00\\x9c\\xc0\\xa0\\xc0\\x9c\\xc0P\\x00=\\x00\\xc0\\x00<\\x00\\xba\\x005\\x00\\x84\\x00/\\x00\\x96\\x00A\\x00\\x05\\x00\\n\\x00\\xff\\x01\\x00\\x00j\\x00\\x00\\x00\\x0e\\x00\\x0c\\x00\\x00\\t127.0.0.1\\x00\\x0b\\x00\\x04\\x03\\x00\\x01\\x02\\x00\\n\\x00\\x0c\\x00\\n\\x00\\x1d\\x00\\x17\\x00\\x1e\\x00\\x19\\x00\\x18\\x00#\\x00\\x00\\x00\\x16\\x00\\x00\\x00\\x17\\x00\\x00\\x00\\r\\x000\\x00.\\x04\\x03\"]\n",
+      "Bad pipe message: %s [b'\\xadh\\xb9?n%\\x1e\\xe8\\x7fz\\x7f\\xe14\\xb2\\xddl\\xab\\xa9\\x00\\x00>\\xc0\\x14\\xc0\\n\\x009\\x008\\x007\\x006\\xc0\\x0f\\xc0\\x05\\x005\\xc0\\x13\\xc0\\t\\x003\\x002\\x001\\x000\\xc0\\x0e\\xc0\\x04\\x00/\\x00\\x9a\\x00\\x99\\x00\\x98\\x00\\x97\\x00\\x96\\x00\\x07\\xc0\\x11\\xc0\\x07\\xc0\\x0c\\xc0\\x02\\x00\\x05\\x00\\x04\\x00\\xff\\x02\\x01\\x00\\x00C\\x00\\x00\\x00\\x0e\\x00\\x0c\\x00\\x00\\t127.0.', b'1\\x00\\x0b\\x00\\x04\\x03\\x00\\x01\\x02\\x00\\n\\x00\\x1c\\x00\\x1a\\x00\\x17\\x00\\x19\\x00\\x1c\\x00\\x1b\\x00\\x18\\x00\\x1a\\x00\\x16\\x00\\x0e\\x00\\r\\x00\\x0b\\x00\\x0c\\x00\\t\\x00\\n\\x00#\\x00\\x00\\x00\\x0f']\n",
+      "Bad pipe message: %s [b'y!}\\xa2$\\x85?\\x81ZD\\xb8fU\\xfb\\x19m\\x160\\x00\\x00\\xa2\\xc0\\x14\\xc0\\n\\x009\\x008\\x007\\x006\\x00\\x88\\x00\\x87\\x00\\x86\\x00\\x85\\xc0\\x19\\x00:\\x00\\x89\\xc0\\x0f\\xc0\\x05\\x005\\x00\\x84\\xc0\\x13\\xc0\\t\\x003\\x002\\x001\\x000\\x00\\x9a\\x00\\x99\\x00\\x98\\x00\\x97\\x00E\\x00D\\x00C\\x00B\\xc0\\x18\\x004\\x00\\x9b\\x00F\\xc0\\x0e\\xc0\\x04\\x00/\\x00\\x96\\x00A\\x00\\x07\\xc0\\x11\\xc0\\x07\\xc0\\x16\\x00\\x18\\xc0\\x0c\\xc0\\x02\\x00\\x05\\x00\\x04\\xc0\\x12\\xc0\\x08\\x00\\x16\\x00\\x13\\x00\\x10\\x00\\r\\xc0\\x17\\x00\\x1b\\xc0\\r\\xc0\\x03\\x00\\n\\x00\\x15\\x00\\x12\\x00\\x0f\\x00\\x0c\\x00\\x1a\\x00']\n",
+      "Bad pipe message: %s [b'n~}\\xba\\xd5\\xbe\\xfbS\\xac\\x07\\t\\xf6\\x85\\xc1\\x1c\\x1f\\xc0\\xf5\\x00\\x00>\\xc0\\x14\\xc0']\n",
+      "Bad pipe message: %s [b'\\x8c\\x14\\xff\\x02\\xce\\xa3\\xc6\\xfb\\x80\\x93\\x94\\tQ\\xef\\xf7a\\xe3\\xcc\\x00\\x00\\xa2\\xc0\\x14\\xc0\\n\\x009\\x008\\x007\\x006\\x00\\x88']\n",
+      "Bad pipe message: %s [b'9\\x008\\x007\\x006\\xc0\\x0f']\n",
+      "Bad pipe message: %s [b'\\x14\\x00\\x11\\x00\\x19\\x00\\x08\\x00']\n",
+      "Bad pipe message: %s [b'\\x06\\x03\\x08\\x07', b'\\x08\\t\\x08\\n\\x08\\x0b\\x08']\n",
+      "Bad pipe message: %s [b'\\x05\\x08\\x06']\n",
+      "Bad pipe message: %s [b'\\x17\\x00\\x03\\xc0\\x10']\n",
+      "Bad pipe message: %s [b'\\x05\\x01\\x06', b'', b'\\x03\\x03']\n",
+      "Bad pipe message: %s [b'']\n",
+      "Bad pipe message: %s [b'', b'\\x02']\n",
+      "Bad pipe message: %s [b'\\x05\\x02\\x06']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exercício 6 Crie um objeto chamado **titanic_menor** e selecione as colunas de *nome*, *idade*, *classe* e *embarque*\n",
+    "titanic_menor = df.copy()\n",
+    "titanic_menor[['nome','idade','classe','embarque']]"
    ]
   }
  ],
