--- a/exercicios/exercicio02.ipynb
+++ b/exercicios/exercicio02.ipynb
@@ -1566,6 +1566,308 @@
     "\n",
     "df[['embarque', 'tarifa']].groupby('embarque').agg(['mean', 'median'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_passageiro</th>\n",
+       "      <th>sobreviveu</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>irmaos_conjuge</th>\n",
+       "      <th>pais_criancas</th>\n",
+       "      <th>passagem</th>\n",
+       "      <th>tarifa</th>\n",
+       "      <th>cabine</th>\n",
+       "      <th>embarque</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>classe</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>216</td>\n",
+       "      <td>216</td>\n",
+       "      <td>216</td>\n",
+       "      <td>216</td>\n",
+       "      <td>186</td>\n",
+       "      <td>216</td>\n",
+       "      <td>216</td>\n",
+       "      <td>216</td>\n",
+       "      <td>216</td>\n",
+       "      <td>176</td>\n",
+       "      <td>214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>184</td>\n",
+       "      <td>184</td>\n",
+       "      <td>184</td>\n",
+       "      <td>184</td>\n",
+       "      <td>173</td>\n",
+       "      <td>184</td>\n",
+       "      <td>184</td>\n",
+       "      <td>184</td>\n",
+       "      <td>184</td>\n",
+       "      <td>16</td>\n",
+       "      <td>184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>491</td>\n",
+       "      <td>491</td>\n",
+       "      <td>491</td>\n",
+       "      <td>491</td>\n",
+       "      <td>355</td>\n",
+       "      <td>491</td>\n",
+       "      <td>491</td>\n",
+       "      <td>491</td>\n",
+       "      <td>491</td>\n",
+       "      <td>12</td>\n",
+       "      <td>491</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id_passageiro  sobreviveu  nome  sexo  idade  irmaos_conjuge  \\\n",
+       "classe                                                                 \n",
+       "1                 216         216   216   216    186             216   \n",
+       "2                 184         184   184   184    173             184   \n",
+       "3                 491         491   491   491    355             491   \n",
+       "\n",
+       "        pais_criancas  passagem  tarifa  cabine  embarque  \n",
+       "classe                                                     \n",
+       "1                 216       216     216     176       214  \n",
+       "2                 184       184     184      16       184  \n",
+       "3                 491       491     491      12       491  "
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#exercício 10 - Agrupe pela classe e conte a quantidade de pessoas por classe\n",
+    "df.groupby(['classe']).agg('count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>id_passageiro</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th>idade</th>\n",
+       "      <th>irmaos_conjuge</th>\n",
+       "      <th>pais_criancas</th>\n",
+       "      <th>passagem</th>\n",
+       "      <th>tarifa</th>\n",
+       "      <th>cabine</th>\n",
+       "      <th>embarque</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sobreviveu</th>\n",
+       "      <th>classe</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">nao</th>\n",
+       "      <th>1</th>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>59</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>97</td>\n",
+       "      <td>97</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "      <td>97</td>\n",
+       "      <td>97</td>\n",
+       "      <td>97</td>\n",
+       "      <td>97</td>\n",
+       "      <td>3</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>372</td>\n",
+       "      <td>372</td>\n",
+       "      <td>372</td>\n",
+       "      <td>270</td>\n",
+       "      <td>372</td>\n",
+       "      <td>372</td>\n",
+       "      <td>372</td>\n",
+       "      <td>372</td>\n",
+       "      <td>6</td>\n",
+       "      <td>372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">sim</th>\n",
+       "      <th>1</th>\n",
+       "      <td>136</td>\n",
+       "      <td>136</td>\n",
+       "      <td>136</td>\n",
+       "      <td>122</td>\n",
+       "      <td>136</td>\n",
+       "      <td>136</td>\n",
+       "      <td>136</td>\n",
+       "      <td>136</td>\n",
+       "      <td>117</td>\n",
+       "      <td>134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>87</td>\n",
+       "      <td>87</td>\n",
+       "      <td>87</td>\n",
+       "      <td>83</td>\n",
+       "      <td>87</td>\n",
+       "      <td>87</td>\n",
+       "      <td>87</td>\n",
+       "      <td>87</td>\n",
+       "      <td>13</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>119</td>\n",
+       "      <td>119</td>\n",
+       "      <td>119</td>\n",
+       "      <td>85</td>\n",
+       "      <td>119</td>\n",
+       "      <td>119</td>\n",
+       "      <td>119</td>\n",
+       "      <td>119</td>\n",
+       "      <td>6</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   id_passageiro  nome  sexo  idade  irmaos_conjuge  \\\n",
+       "sobreviveu classe                                                     \n",
+       "nao        1                  80    80    80     64              80   \n",
+       "           2                  97    97    97     90              97   \n",
+       "           3                 372   372   372    270             372   \n",
+       "sim        1                 136   136   136    122             136   \n",
+       "           2                  87    87    87     83              87   \n",
+       "           3                 119   119   119     85             119   \n",
+       "\n",
+       "                   pais_criancas  passagem  tarifa  cabine  embarque  \n",
+       "sobreviveu classe                                                     \n",
+       "nao        1                  80        80      80      59        80  \n",
+       "           2                  97        97      97       3        97  \n",
+       "           3                 372       372     372       6       372  \n",
+       "sim        1                 136       136     136     117       134  \n",
+       "           2                  87        87      87      13        87  \n",
+       "           3                 119       119     119       6       119  "
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# exercício 11 - Agrupe pela classe e pela coluna sobreviveu e conte a quantidade de pessoas que sobreviveu de acordo com cada classe. \n",
+    "# Quem sobreviveu mais? A classe mais alta ou a mais baixa?\n",
+    "df.groupby(['sobreviveu', 'classe']).agg('count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Com base na tabela acima, a classe que mais sobreviveu foi a classe 1"
+   ]
   }
  ],
  "metadata": {
